sn0n.github.io isnt blokz/demo
Initially I was thinking about uploading just blokz/demo here, changed my mind and deploying from blokz/gen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,13 @@
   padding: 3px;
   }
   
+.name {
+margin-bottom: 0px
+}
+
+.UserTitle {
+ margin-top: 2px;
+}
 
 /*************************************
  * TITLE: Sinorca Screen Stylesheet  *
