--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -3,7 +3,7 @@
       <h1><%= site.product %></h1>
 
       <p><img src="../images/logo192.png"><br />
-            20 Stickers
+            'allo'
          </p>
 
 
@@ -22,7 +22,7 @@
 
    <h1>About <%= site.product %></h1>
 
-   <div>Our stickers are 100% organic and GMO free. Printed on the finest sheep skin with the blood of the sacrificed. 
+   <div>words to come! 
    </div>
 
 </div>
@@ -36,117 +36,12 @@
       <span class="close">&times;</span>
       <div>
 
-         <h3 class="title is-5">Table Of Contents</h3>
-         <p><a href="#giftgiverfaq">1. GiftGiver FAQ</a></p>
-         <p><a href="#hivefaq">2. Hive FAQ</a></p>
-         <!-- FAQ CONTENT-->
-         <div class="hero-body">
-            <section class="hero is-medium">
-               <div class="container">
-                  <h1 style="margin: auto; justify-content: center;">About</h1>
-                  <p>
-                     Giftgiver is an initative to help the onboarding process on the HIVE blockchain. Many
-                     users
-                     might find
-                     it frustrating to run out of Resource Credits(RC) which prevents them from doing any
-                     actions
-                     on the
-                     chain. To help aleviate that, we provide users with a temporary delegation to help get
-                     them
-                     out of the
-                     the RC pit and get back to using the platform.
-                  </p>
+words!
 
-
-               </div>
-            </section>
-         </div>
-         <hr>
-
-         <center>
-            <div class="hero-body" id="giftgiverfaq" name="giftgiverfaq">
-               <h1 class="title">GiftGiver FAQ</h1>
-            </div>
-         </center>
-         <div class="container">
-
-            <p>If you have any questions about either GiftGiver or Hive, they are answered below. If you
-               have
-               futher questions, you can ask us on our <a href="https://discord.gg/6QmMgJC">Discord
-                  Server</a>.
-            </p><br>
-            <p><b>Q: What are Resource Credits?</b></p><sub>A: Resource Credits(abberivated RC) are what you
-               need to
-               &quot;pay&quot; to get your transaction broadcast on the hive blockchain. Each action costs a
-               different
-               amount of RC and you can check out the current costs <a href="linkToBEEMPYRCPRICES">here</a>.
-               You
-               can&apos;t buy RC directly, but you get a certain amount allocated to you for the amount of
-               VESTS
-               you
-               have in your account. The more VESTS that you have, the more you get allocated to you. Once you
-               use
-               up
-               the RC you have, they will grow back at a rate of 20% of your max each day. Without enough RC,
-               you
-               can&apos;t boradcast anything to the hive blockchain.</sub><br><br>
-            <p><b>Q: How can I increase my RC?</b></p><sub>A: Quite simply, by increasing the amount of VESTs
-               you
-               own.
-               You can gain more VESTs by powering up liquid HIVE.</sub><br><br>
-            <p><b>Q: How much SP do you guys delegate?</b></p><sub>A: The SP amount that we delegate is
-               constantly
-               changing due to the difference between VESTs and SP. VESTs are constant, while SP isn&apos;t.
-               You
-               can
-               see how many VESTs are in 1 SP by going to <a href="https://hive-db.com">hive-db</a> and
-               checking
-               out
-               the right sidebar. But we delegate 60,000.000000 VESTs which is about 15 SP as of writing this.
-               We
-               chose
-               this value as thats what most signup tools give as their initial delegation and should be enough
-               to
-               use
-               the chain for a while.</sub><br><br>
-            <p><b>Q: How long are the delegations?</b></p><sub>A: That can vary depending on the configurations
-               that
-               we
-               set, but right now we are making them last 7 days.</sub><br><br>
-            <p><b>Q: How often can I get a delegation?</b></p><sub>A: Again this can vary as well depending on
-               our
-               configurations, but you can request a new delegation 3 days after your current delegation has
-               ended.</sub><br><br>
-            <p><b>Q: Who can get a delegation?</b></p><sub>A: You must not be on any of the universal blacklist
-               thats
-               provided by <a href="https://peakd.com/@themarkymark">themarkymark</a> as well as our internal
-               blacklist. You must also be below a certain RC threshold at the time of submitting the
-               delegation
-               request. We keep that number private to avoid spammers.</sub><br><br>
-            <p><b>Q: I&apos;ve got a question thats not listed, where can I contact you?</b></p><sub>A: You can
-               contact
-               us on our <a href="https://discord.gg/6QmMgJC">Discord</a>.</sub><br><br>
-
-
-         </div>
-         <hr>
-         <hr>
-         <center>
-            <div class="hero-body" id="hivefaq" name="hivefaq">
-               <h1 class="title">Hive FAQ (WORK IN PROGRESS)</h1>
-            </div>
-         </center>
-         <div class="container">
-            <p><b>Q: What is Hive?</b></p><sub>A: A blockchain.</sub><br>
-
-         </div>
-
-
-
-         <center><sub>Ad</sub>
+         <!-- <center><sub>Ad</sub>
             <div class="sp"><a href="https://self-help.dev"><img src="./images/selfhelpdev.png"></a></div>
          </center>
-         <!-- ^^^ Ad Block-->
+         ^^^ Ad Block-->
 
 
 
