--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,21 +1,21 @@
 <!-- ##### Footer ##### -->
 <div class="footer" id="footer">
+
   <div class="column">
-    <h3>Contact &amp; Support</h3>
-    <p><a href="https://discord.gg/6QmMgJC" class="navi">Discord</a></p>
-    <p><a href="https://peakd.com/@giftgiver" class="navi">Hive</a></p>
-    <p><a href="mailto:giftgiver@ryamer.com" class="navi">e-Mail</a></p>
+    <h3>Section</h3>
+    <p><a href="#" class="navi">links</a></p>
   </div>
+
   <div class="column">
-    <h3>Advertise with Us</h3>
-    <p><a href="https://discord.gg/992ZD4d" class="navi">Discord</a></p>
-    <p><a href="mailto:giftgiver@ryamer.com" class="navi">e-Mail</a></p>
+    <h3>Section</h3>
+    <p><a href="#" class="navi">links</a></p>
   </div>
+
   <div class="column">
-    <h3>Support Us</h3>
-    <p><a href="https://vote.hive.uno/@hextech" class="navi">Vote for Our Witness</a></p>
-    <p><a href="https://peakd.com/@giftgiver" class="navi">Donate Hive</a></p>
+    <h3>Section</h3>
+    <p><a href="#" class="navi">links</a></p>
   </div>
+  
 </div>
 
 
