--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -1,4 +1,4 @@
-<title><%= site.product %> - <%= site.title %></title>
+<title><%= site.version %> - <%= site.title %></title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../css/styles.css">
