--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -3,11 +3,10 @@
       <h1><%= site.product %></h1>
 
       <p><img src="../images/logo192.png"><br />
-            'allo'
          </p>
 
 
-         <p class="control"><a class="button is-rounded is-primary" href="#learnmore">Learn More</a></p>
+         <p class="control"><a class="button is-rounded is-primary" href="#learnmore">Enter</a></p>
 
     
 
