--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -2,26 +2,31 @@
 <div class="footer" id="footer">
 
   <div class="column">
-    <h3>Section</h3>
+    <h3>Section 1</h3>
     <p><a href="#" class="navi">links</a></p>
   </div>
 
   <div class="column">
-    <h3>Section</h3>
+    <h3>Section 2</h3>
     <p><a href="#" class="navi">links</a></p>
   </div>
 
   <div class="column">
-    <h3>Section</h3>
+    <h3>Section 3</h3>
+    <p><a href="#" class="navi">links</a></p>
+    <p><a href="#" class="navi">links</a></p>
     <p><a href="#" class="navi">links</a></p>
   </div>
-  
+
 </div>
 
 
+<img onclick="javascript:location.href='#'" src="../images/puffboy.gif" style="padding: 2em">
+
+
 <div
-   style="position: fixed; left: 50%; border: 1px dashed lightslategray; transform: translate(-50%, 0); text-align: center; width:728px; height:90px; bottom: 0px; font-size: 2em; color: white; z-index: 1;">
-   <div style="color: white; padding: 0px; margin: 0px; font-size: .42em; margin-top: -1.05em; position: fixed;">Ad</div>
-   <a href="https://self-help.dev" target="_blank"><img src="./images/selfhelpdev.png"></a>
+  style="position: fixed; left: 50%; border: 1px dashed lightslategray; transform: translate(-50%, 0); text-align: center; width:728px; height:90px; bottom: 0px; font-size: 2em; color: white; z-index: 1;">
+  <div style="color: white; padding: 0px; margin: 0px; font-size: .42em; margin-top: -1.05em; position: fixed;">Ad</div>
+  <a href="https://blokz.io" target="_blank"><img src="../images/blokz_ad.png"></a>
 </div>
 <!-- ^^^ Ad Block-->
