--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -1,2 +1,2 @@
 <!-- ##### Header ##### -->
-<span style="position: absolute; left: .25em; top: .25em; font-size: 2em; color: white; z-index: 1"><%= site.title %></span>
+<span style="position: absolute; left: .25em; top: .25em; font-size: 2em;   text-shadow: -1px 0 #00d1b2, 0 1px #00d1b2, 1px 0 #00d1b2, 0 -1px #00d1b2; color: white; z-index: 1"><%= site.title %></span>
