--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,6 +1,7 @@
 <!-- ##### navigation ##### -->
-<nav style="right: 10px; top: 20px;  position: absolute; color: white; z-index: 1">
-  <a class="navi" href="#learnmore">Learn More</a>
-  <a class="navi" href="#" onClick="DisplayPostFAQ()">About &amp; FAQ</a>
-  <a class="navi" href="#footer">Contact &amp; Support</a>
+<nav style="right: 10px; top: 20px;  position: fixed;  text-shadow: -1px 0 #00d1b2, 0 1px #00d1b2, 1px 0 #00d1b2, 0 -1px #00d1b2; color: white; z-index: 1">
+  <a class="navi" href="../">Home</a>
+  <a class="navi" href="../blog">Journal</a>
+  <a class="navi" href="../projects">Projects</a>
+  <a class="navi" href="../more">More</a>
 </nav>
