--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -4,6 +4,9 @@ html {
     background-color: #000000;
 }
 
+a {
+    color: #00d1b2;
+}
 main {
     margin: 0px; 
     padding: 0px;
@@ -94,7 +97,7 @@ input[type=text] {
     top: 0;
     width: 100%;
     height: 100%;
-    background: url(../images/gift.jpg);
+    background: url(../images/clouds.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -160,6 +163,8 @@ input[type=text] {
     margin: auto;
     padding: 25px;
     min-height: 100vh;
+
+    padding-top: 65px;
 }
 
 
@@ -203,5 +208,5 @@ input[type=text] {
     padding: .75rem;
     float: left;
     margin: 0px;
-    width: 31%;
+    width: 30%;
 }
