--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -97,7 +97,7 @@ input[type=text] {
     top: 0;
     width: 100%;
     height: 100%;
-    background: url(../images/clouds.jpg);
+    background: url(../images/background.png);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
