--- a/src/pages/updates.ejs
+++ b/src/pages/updates.ejs
@@ -1,6 +1,3 @@
-
-<h1 style="color: #00d1b2; margin: auto; text-align: center; justify-content: center; margin-top: 65px; font-size: 2em;">sn0n's $hive feed</h1>
-
 <div id="post" class="text">
 
 </div>
@@ -89,7 +86,7 @@ console.log(user + " is the default hive user");
 
 
             // view more on peakd
-            div.innerHTML += "<br /><div style='display: block; border: 2px solid red; padding: 1em; margin: 1em; background-color: black; color: #00d1b2; text-align: left'>View More on <a href='http://peakd.com/@" + user + "/' target='_blank'>peakd.com/@" + user + "</a></div>";
+            div.innerHTML += "<br /><div style='display: block; padding: 1em; margin: 1em; background-color: black; color: #00d1b2; text-align: left'>View More on <a href='http://peakd.com/@" + user + "/' target='_blank'>peakd.com/@" + user + "</a></div>";
         }); 
     };
 </script>
