--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,7 +1,7 @@
 <!-- ##### navigation ##### -->
 <nav style="right: 10px; top: 20px;  position: fixed;  text-shadow: -1px 0 #00d1b2, 0 1px #00d1b2, 1px 0 #00d1b2, 0 -1px #00d1b2; color: white; z-index: 1">
   <a class="navi" href="../">Home</a>
-  <a class="navi" href="../blog">Journal</a>
+  <a class="navi" href="../updates">Updates</a>
   <a class="navi" href="../projects">Projects</a>
   <a class="navi" href="../more">More</a>
 </nav>
