sinorca was a thing

--- a/src/layouts/default.ejs
+++ b/src/layouts/default.ejs
@@ -7,23 +7,25 @@
 
 <body>
 
-  <header>
-    <%- include('partials/header') %>
-  </header>
+<header>
+  <%- include('partials/header') %>
+</header>
 
-  <nav>
-    <%- include('partials/nav') %>
-  </nav>
+<!-- ##### Side Bar ##### 
+<nav id="side-bar">
+  <%- include('partials/nav') %>
+</nav> -->
 
-  <main>
-    <%- body %>
-  </main>
+<!-- ##### Main Copy ##### -->
+<main id="main-copy">
+  <%- body %>
+</main>
 
-  <footer>
-    <%- include('partials/footer') %>
-  </footer>
+<!-- ##### Footer ##### -->
+<footer id="footer">
+  <%- include('partials/footer') %>
+</footer>
 
-  <script src="/js/hiveland.js"></script>
 </body>
 
 </html>
