--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,11 +1,26 @@
 <!-- ##### Footer ##### -->
 
+
+  <div class="right">
+    <a href="https://blokz.io/">http://blokz.io/</a>
+    This website is <a href="http://copyfree.org/" target="_blank">Copyfree</a><br />
+    This is Life. It's just a game, have fun. <br />
+   Words, Pictures, Things &amp; Such 
+   found here should be treated as nothing more than entertainment &amp; food for thought. <br />
+   I am NOT responsible for any decisions made by you or anyone else. Your actions are your own.   
+  
+   <div style="text-align: right">Rob Foraker (@sn0n)<br />  
+   <a href="/contact/">Contact Info</a><br />
+    - Consultation &amp; Freelance Availability -  </div>
+  </div>
+
+
+
 <img onclick="javascript:location.href='#'" src="../images/puffboy.gif" style="padding: 2em">
 
 
 <div
-  style="position: fixed; left: 50%; border: 1px dashed lightslategray; transform: translate(-50%, 0); text-align: center; width:728px; height:90px; bottom: 0px; font-size: 2em; color: white; z-index: 1;">
-  <div style="color: white; padding: 0px; margin: 0px; font-size: .42em; margin-top: -1.05em; position: fixed;">Ad</div>
-  <a href="https://blokz.io" target="_blank"><img src="../images/blokz_ad.png"></a>
+style="position: fixed; left: 50%; transform: translate(-50%, 0); text-align: center; bottom: 0px; font-size: 2em; color: white; z-index: 1;">
+  <a href="https://blokz.io" target="_blank"><img src="../images/blokz_ad.png" style="max-width: 60%;"></a>
 </div>
 <!-- ^^^ Ad Block-->
