--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -1,2 +1,36 @@
 <!-- ##### Header ##### -->
-<span style="position: absolute; left: .25em; top: .25em; font-size: 2em;   text-shadow: -1px 0 #00d1b2, 0 1px #00d1b2, 1px 0 #00d1b2, 0 -1px #00d1b2; color: white; z-index: 1"><%= site.title %></span>
+<!-- ##### Header ##### -->
+
+<div id="header">
+    <div class="superHeader">
+        <div class="left">
+            <!--   <span class="doNotDisplay">Related sites:</span>
+            <a href="../index.html">Link 1</a> |
+            <a href="../index.html">Link 2</a>
+          </div>
+          <div class="right">
+            <span class="doNotDisplay">More related sites:</span>
+            <a href="../index.html">Link 3</a> |
+            <a href="../index.html">Link 4</a> |
+            <a href="../index.html">Link 5</a> |
+            <a href="../index.html">Link 6</a> |
+            <a href="../index.html">Link 7</a> -->
+        </div>
+    </div>
+
+    <div class="midHeader">
+        <h1 class="headerTitle">
+            <%= site.title %>
+        </h1>
+    </div>
+
+    <!--  class="highlight" for page links -->
+    <div class="subHeader">
+        <span class="doNotDisplay">Navigation:</span>
+        <a href="../index.html">Home</a> |
+        <a href="../updates/">Updates</a> |
+        <a href="../projects">Projects</a> |
+        <a href="../contact">Contact</a> |
+        <a href="../about">About</a>
+    </div>
+</div>
