--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,7 +1,41 @@
-<!-- ##### navigation ##### -->
-<nav style="right: 10px; top: 20px;  position: fixed;  text-shadow: -1px 0 #00d1b2, 0 1px #00d1b2, 1px 0 #00d1b2, 0 -1px #00d1b2; color: white; z-index: 1">
-  <a class="navi" href="../">Home</a>
-  <a class="navi" href="../updates">Updates</a>
-  <a class="navi" href="../projects">Projects</a>
-  <a class="navi" href="../more">More</a>
-</nav>
+<div>
+  <p class="sideBarTitle">Navigate this page</p>
+  <ul>
+    <li><a href="#introduction">&rsaquo; Introduction</a></li>
+    <li><a href="#cross-browser" title="Improved cross-browser compatibility">&rsaquo; Cross-browser</a></li>
+    <li><a href="#stylesheets" title="Modified stylesheets">&rsaquo; Stylesheets</a></li>
+    <li><a href="#accessibility" title="Improved accessibility">&rsaquo; Accessibility</a></li>
+  </ul>
+</div>
+
+<div>
+  <p class="sideBarTitle">Sample menu</p>
+  <ul>
+    <li><a href="../index.html">&rsaquo; Sidebar</a></li>
+    <li><span class="thisPage">&raquo; Links</span></li>
+    <li><a href="../index.html">&rsaquo; Go</a></li>
+    <li><a href="../index.html">&rsaquo; Here</a></li>
+    <li><a href="http://www.oswd.org/email.phtml?user=haran">&rsaquo; Submit comments</a></li>
+  </ul>
+</div>
+
+<div class="lighterBackground">
+  <p class="sideBarTitle">Alternative stylesheet</p>
+  <span class="sideBarText">
+    Sinorca contains an alternative stylesheet that renders this side bar differently.
+  </span>
+  <span class="sideBarText">
+    To view the alternative stylesheet in (certain)
+    <span class="titleTip" title="eg: Mozilla, Camino, Netscape 6+">Gecko-based browsers</span>,
+    select <em>Sinorca (alternative)</em> from the <em>View</em> &rsaquo; <em>Use Style</em>
+    submenu.
+  </span>
+</div>
+
+<div>
+  <p class="sideBarTitle">Validation</p>
+  <span class="sideBarText">
+    Validate the <a href="http://validator.w3.org/check/referer">XHTML</a> and
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> of this page.
+  </span>
+</div>
