--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,212 +1,290 @@
-html {
-    font-size: 24px;
-
-    background-color: #000000;
-}
-
-a {
-    color: #00d1b2;
-}
-main {
-    margin: 0px; 
-    padding: 0px;
-}
-
-input[type=text] {
-    border: none;
-    border-bottom: 2px solid red;
-    font-size: 1.25em;
-    padding: 3px;
-}
-
-.navi {
-    text-decoration: none;
-    color: white;
-    padding-right: 2em;
-}
-
-/* The Modal (background) */
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    background-color: #f0f0f8;
-    /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-    background-color: #fff;
-    margin: 80px auto;
-    padding: 10px;
-    padding-bottom: 75px;
-    border: 1px solid #e7e7f1;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.24), 0 6px 20px 0 rgba(0, 0, 0, 0.42);
-    width: 80%;
-    height: 60%;
-    overflow: scroll;
-}
-
-/* The Close Button */
-.close {
-    z-index: 1;
-    color: #E31337;
-    right: 15px;
-    float: right;
-    top: 15px;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
+/*************************************
+ * TITLE: Sinorca Screen Stylesheet  *
+ * URI  : sinorca/sinorca-screen.css *
+ * MODIF: 2003-Apr-30 19:31 +0800    *
+ *************************************/
 
 
+/* ##### Common Styles ##### */
 
-* {
+body {
+    color: black;
+    background-color: rgb(240,240,240);
+    font-family: verdana, helvetica, arial, sans-serif;
+    font-size: 71%;  /* Enables font size scaling in MSIE */
     margin: 0;
     padding: 0;
-    font-family: "montserrat", sans-serif;
-}
-
-.landing-page {
-    width: 100%;
-    height: 100vh;
-    background: #000;
-    position: relative;
-    overflow: hidden;
-}
-
-.landing-page::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: url(../images/background.png);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.3;
-}
-
-.page-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    width: 100%;
-    max-width: 800px;
-    text-align: center;
-    padding: 0 40px;
-    box-sizing: border-box;
-}
-
-.page-content h1 {
-    color: #00d1b2;
-    text-transform: uppercase;
-    font-size: 2em;
-    font-weight: 900;
-    margin-bottom: 20px;
-}
-
-.page-content p {
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.page-content a {
-    display: inline-block;
+  }
+  
+  html > body {
+    font-size: 8.5pt;
+  }
+  
+  acronym, .titleTip {
+    border-bottom: 1px dotted rgb(153,153,153);
+    cursor: help;
+    margin: 0;
+    padding: 0 0 0.4px 0;
+  }
+  
+  .doNotDisplay {
+    display: none;
+  }
+  
+  .smallCaps {
+    font-size: 110%;
+    font-variant: small-caps;
+  }
+  
+  
+  /* ##### Header ##### */
+  
+  .superHeader {
+    color: white;
+    background-color: rgb(100,135,220);
+    height: 2em;
+  }
+  
+  .superHeader a {
+    color: white;
+    background-color: transparent;
     text-decoration: none;
-    color: #00d1b2;
-    border: 2px solid #00d1b2;
-    text-transform: uppercase;
-    padding: 10px 20px;
-    transition: 0.2s linear;
-}
-
-.page-content a:hover {
-    color: #fff;
-    background: #00d1b2;
-}
-
-.text {
-    min-height: 60vh;
-    padding: 10px;
-    text-align: center;
-    color: white;
-}
-
-.text div {
-    margin-bottom: 6px;
-}
-
-#learnmore {
-    color: #00d1b2;
-    background: black;
-    margin: auto;
-    padding: 25px;
-    min-height: 100vh;
-
-    padding-top: 65px;
-}
-
-
-#footer {
-    background: black;
-    color: #00d1b2;
-    margin: 0px;
-    padding: 0px;
-    text-align: center;
-}
-
-
-
-.footer {
-    font-size: 1em;
-    background-color: #000000;
-    padding: 3rem 1.5rem 6rem;
-    color: white;
-    display: block;
-    margin: auto;
-    width: 100%;
-    border: 1px solid black;
-    min-height: 100vh;
-}
-
-.adbox {
-    width: 728px;
-    height: 90px;
-    border: 1px dashed red;
-    bottom: 0px;
+    font-size: 91%;
+    margin: 0;
+    padding: 0 0.5ex 0 0.25ex;
+  }
+  
+  .superHeader a:hover {
+    text-decoration: underline;
+  }
+  
+  .superHeader .left {
     position: absolute;
-    background: yellow;
-    z-index: 1;
-}
-
-.column {
-    display: block;
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 1;
-    padding: .75rem;
+    left: 1.5mm;
+    top: 0.75ex;
+  }
+  
+  .superHeader .right {
+    position: absolute;
+    right: 1.5mm;
+    top: 0.75ex;
+  }
+  
+  .midHeader {
+    color: rgb(39,78,144);
+    background-color: rgb(140,170,230);
+  }
+  
+  .headerTitle {
+    font-size: 337%;
+    font-weight: normal;
+    margin: 0 0 0 4mm;
+    padding: 0.25ex 0;
+  }
+  
+  .subHeader {
+    color: white;
+    background-color: rgb(0,51,153);
+    margin: 0;
+    padding: 1ex 1ex 1ex 1.5mm;
+  }
+  
+  .subHeader a {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0;
+    padding: 0 0.75ex 0 0.5ex;
+  }  
+  
+  .subHeader a:hover {
+    text-decoration: underline;
+  }
+  
+  .superHeader .highlight, .subHeader .highlight {
+    color: rgb(253,160,91);
+    background-color: transparent;
+  }
+  
+  
+  /* ##### Side Bar ##### */
+  
+  #side-bar {
+    width: 15em;
     float: left;
-    margin: 0px;
-    width: 30%;
-}
+    clear: left;
+    border-right: 1px solid rgb(153,153,153);
+  }
+  
+  #side-bar div {
+    border-bottom: 1px solid rgb(153,153,153);
+  }
+  
+  .sideBarTitle {
+    font-weight: bold;
+    margin: 0 0 0.5em 2.5mm;
+    padding: 1em 0 0 0;
+  }
+  
+  #side-bar ul {
+    list-style-type: none;
+    list-style-position: outside;
+    margin: 0;
+    padding: 0 0 1.1em 0;
+  }
+  
+  #side-bar li {
+    margin: 0;
+    padding: 0.1ex 0;  /* Circumvents a rendering bug (?) in MSIE 6.0 */
+  }
+  
+  #side-bar a, .thisPage {
+    color: rgb(0,102,204);
+    background-color: transparent;
+    text-decoration: none;
+    margin: 0;
+    padding: 0.75em 1ex 0.75em 5mm;
+    display: block;
+  }
+  
+  .thisPage {
+    color: black;
+    background-color: white;
+    padding-left: 4mm;
+    border-top: 1px solid rgb(153,153,153);
+    border-bottom: 1px solid rgb(153,153,153);
+  }
+  
+  #side-bar a:hover {
+    color: white;
+    background-color: rgb(100,135,220);
+    text-decoration: none;
+  }
+  
+  .sideBarText {
+    line-height: 1.5em;
+    margin: 0 0 1em 0;
+    padding: 0 1.5ex 0 2.5mm;
+    display: block;
+  }
+  
+  #side-bar .sideBarText a {
+    text-decoration: underline;
+    margin: 0;
+    padding: 0;
+    display: inline;
+  }
+  
+  #side-bar .sideBarText a:hover {
+    color: rgb(0,102,204);
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  .lighterBackground {
+    color: inherit;
+    background-color: white;
+  }
+  
+  
+  /* ##### Main Copy ##### */
+  
+  #main-copy {
+    color: black;
+    background-color: white;
+    text-align: justify;
+    line-height: 1.5em;
+    min-height: 100vh;
+    padding: 0.5mm 5mm 5mm 5mm;
+
+
+  }
+  
+  #main-copy p {
+    margin: 1em 1ex 2em 1ex;
+    padding: 0;
+  }
+  
+  #main-copy a {
+    color: rgb(0,102,204);
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  #main-copy a:hover {
+    text-decoration: none;
+  }
+  
+  #main-copy h1 {
+    color: white;
+    background-color: rgb(100,135,220);
+    font-size: 100%;
+    font-weight: bold;
+    margin: 1em 0 0 0;
+    padding: 0.5ex 0 0.5ex 1ex;
+  }
+  
+  #main-copy .topOfPage {
+    color: white;
+    background-color: transparent;
+    font-size: 91%;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 2.5ex 1ex 0 0;  /* For MSIE */
+    padding: 0;
+    float: right;
+  }
+  
+  #main-copy > .topOfPage {
+    margin: 2.75ex 1ex 0 0;  /* For fully standards-compliant user agents */
+  }
+  
+  dl {
+    margin: 1em 1ex 2em 1ex;
+    padding: 0;
+  }
+  
+  dt {
+    font-weight: bold;
+    margin: 0 0 0 0;
+    padding: 0;
+  }
+  
+  dd {
+    margin: 0 0 2em 2em;
+    padding: 0;
+  }
+  
+  
+  /* ##### Footer ##### */
+  
+  #footer {
+    color: white;
+    background-color: rgb(100,135,220);
+    font-size: 91%;
+    margin: 0;
+    padding: 1em 2.5mm 22.5ex 2.5mm;
+    clear: both;
+  }
+  
+  #footer .left {
+    line-height: 1.45em;
+    float: left;
+    clear: left;
+  }
+  
+  #footer .right {
+    text-align: right;
+    line-height: 1.45em;
+  }
+  
+  #footer a {
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  #footer a:hover {
+    text-decoration: none;
+  }
