--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1,53 +1,4 @@
-<div class="landing-page">
-   <div class="page-content">
-      <h1><%= site.product %></h1>
+<h1 id="introduction">Introduction</h1>
+<p>Welcome to my little spot on github pages, there isnt much here, but feel free to check my <a href="../updates">blog</a> regularly for updates</p>
 
-      <p><img src="../images/logo192.png"><br />
-         </p>
-
-
-         <p class="control"><a class="button is-rounded is-primary" href="#learnmore">Enter</a></p>
-
-    
-
- 
-   </div>
-
-</div>
-
-
-
-<div class="text" id="learnmore">
-
-   <h1>About <%= site.product %></h1>
-
-   <div>words to come! 
-   </div>
-
-</div>
-
-
-
-
-<!-- FAQ Box -->
-<div id="myModal" class="modal">
-   <div class="modal-content">
-      <span class="close">&times;</span>
-      <div>
-
-words!
-
-         <!-- <center><sub>Ad</sub>
-            <div class="sp"><a href="https://self-help.dev"><img src="./images/selfhelpdev.png"></a></div>
-         </center>
-         ^^^ Ad Block-->
-
-
-
-         <!-- FAQ CONTENT -->
-      </div>
-   </div>
-</div>
-<!-- ^^^  FAQ Box -->
-
-
+<a class="topOfPage" href="#top" title="Go to the top of this page">^ TOP</a>
