--- a/src/pages/updates.ejs
+++ b/src/pages/updates.ejs
@@ -1,6 +1,4 @@
-<div id="post" class="text">
 
-</div>
 <script src="https://cdn.jsdelivr.net/npm/@hiveio/hive-js/dist/hive.min.js"></script>
 <script src="https://cdn.jsdelivr.net/remarkable/1.7.1/remarkable.min.js"></script>
 
@@ -38,7 +36,7 @@ console.log(user + " is the default hive user");
             //console.log("recent1 from main: " + recent1.body);
             var recent1date = recent1.created.slice(0, 10);
 
-            var div = document.getElementById('post');
+            var div = document.getElementById('main-copy');
 
        
             
@@ -49,7 +47,7 @@ console.log(user + " is the default hive user");
             var recent1date = recent1.created.slice(0, 10);
             post1 = md.render(recent1.body).replace("\n", "");
             post1 = post1.replace(new RegExp("<img ", 'g'), "<img width='80%' ");
-            div.innerHTML += '<div id="post" style="display: block; border-bottom: 2px solid red; padding: 1em; margin: 1em; background-color: black; color: #00d1b2; text-align: left"><h1>' + recent1.title + "</h1><small>" + recent1date + "</small><p>" + post1 + "</p></div>";
+            div.innerHTML += '<div id="post"><h1>' + recent1.title + "</h1><small>" + recent1date + "</small><p>" + post1 + "</p></div>";
 
            
             //document.getElementById("HivePost").innerHTML = marked(recent1.body);
@@ -64,7 +62,7 @@ console.log(user + " is the default hive user");
             var recent2date = recent2.created.slice(0, 10);
             post2 = md.render(recent2.body).replace("\n", "");
             post2 = post2.replace(new RegExp("<img ", 'g'), "<img width='80%' ");
-            div.innerHTML += '<div id="post" style="display: block; border-bottom: 2px solid red; padding: 1em; margin: 1em; background-color: black; color: #00d1b2; text-align: left"><h1>' + recent2.title + "</h1><small>" + recent2date + "</small><p>" + post2 + "</p></div>";
+            div.innerHTML += '<div id="post"><h1>' + recent2.title + "</h1><small>" + recent2date + "</small><p>" + post2 + "</p></div>";
 
 
             //document.getElementById("HivePost").innerHTML = marked(recent1.body);
@@ -77,7 +75,7 @@ console.log(user + " is the default hive user");
             var recent3date = recent3.created.slice(0, 10);
             post3 = md.render(recent3.body).replace("\n", "");
             post3 = post3.replace(new RegExp("<img ", 'g'), "<img width='80%' ");
-            div.innerHTML += '<div id="post" style="display: block; border-bottom: 2px solid red; padding: 1em; margin: 1em; background-color: black; color: #00d1b2; text-align: left"><h1>' + recent3.title + "</h1><small>" + recent3date + "</small><p>" + post3 + "</p></div>";
+            div.innerHTML += '<div id="post"><h1>' + recent3.title + "</h1><small>" + recent3date + "</small><p>" + post3 + "</p></div>";
 
 
             //document.getElementById("HivePost").innerHTML = marked(recent1.body);
@@ -86,7 +84,7 @@ console.log(user + " is the default hive user");
 
 
             // view more on peakd
-            div.innerHTML += "<br /><div style='display: block; padding: 1em; margin: 1em; background-color: black; color: #00d1b2; text-align: left'>View More on <a href='http://peakd.com/@" + user + "/' target='_blank'>peakd.com/@" + user + "</a></div>";
+            div.innerHTML += "<br /><div style='display: block; padding: 1em; margin: 1em;  text-align: left'>View More on <a href='http://personal.community/?hive=" + user + "' target='_blank'>http://personal.community/?hive=" + user + "</a></div>";
         }); 
     };
 </script>
