--- a/src/layouts/default.ejs
+++ b/src/layouts/default.ejs
@@ -11,10 +11,10 @@
   <%- include('partials/header') %>
 </header>
 
-<!-- ##### Side Bar ##### 
+<!-- ##### Side Bar #####  -->
 <nav id="side-bar">
   <%- include('partials/nav') %>
-</nav> -->
+</nav>
 
 <!-- ##### Main Copy ##### -->
 <main id="main-copy">
