--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -1,6 +1,10 @@
 <title><%= site.title %> - <%= site.version %> </title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../css/styles.css">
+<link rel="stylesheet" href="../css/styles.css?ver=5.2">
 
 <link rel="icon" href="../images/favicon.png">
+
+<!-- playground stuff -->
+<script src="../js/aes256.min.js?ver=5.2"></script>
+<script src="../js/wordlist.js?ver=5.2"></script>
