--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -197,7 +197,8 @@ body {
     line-height: 1.5em;
     min-height: 100vh;
     padding: 0.5mm 5mm 5mm 5mm;
-
+    border-left: 1px solid rgb(153,153,153);
+    margin: 0 0 0 15em;
 
   }
   
