--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -10,7 +10,7 @@
    I am NOT responsible for any decisions made by you or anyone else. Your actions are your own.   
   
    <div style="text-align: right">Snahn ip (@sn0n)<br />  
-   <a href="/contact/">Contact Info</a><br />
+   <a href="/contact/">Contact Info</a> for:<br />
     - Consultation &amp; Freelance Availability -  </div>
   </div>
 
