Test build script
Does it work?!?

--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -3,7 +3,7 @@
 
   <div class="right">
     <a href="https://sn0n.github.io/">http://sn0n.github.io/</a><br />
-    This website is <a href="http://copyfree.org/" target="_blank">Copyfree</a><br />
+    This website is <a href="http://copyfree.org/" target="_blank">Copyfree</a>, or was it unlicense(?), Idk, either way ....<br />
     This is Life. It's just a game, have fun. <br />
    Words, Pictures, Things &amp; Such 
    found here should be treated as nothing more than entertainment &amp; food for thought. <br />
