--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -33,7 +33,7 @@ https://github.com/mervick/aes-everywhere/tree/master/javascript
         //console.log(err, result);
         //});
         console.log(JSON.parse(passed));
-        document.getElementById("generated").innerHTML = "<strong>Submitted</strong><div style='width:80%;>" + passed + "</div>";
+        document.getElementById("generated").innerHTML = "<strong>Submitted</strong><div style='margin: .5em;'>" + passed + "</div>";
 
     }
 
