working on things, like alot of em

--- a/src/layouts/default.ejs
+++ b/src/layouts/default.ejs
@@ -17,7 +17,7 @@
 </nav>
 
 <!-- ##### Main Copy ##### -->
-<main id="main-copy">
+<main id="main-copy" style="min-height: 150vh;">
   <%- body %>
 </main>
 
