--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -3,15 +3,17 @@ https://www.eff.org/dice
 
 https://github.com/mervick/aes-everywhere/tree/master/javascript
 -->
+<!-- <h1>#DriveIdeas2Creation in a sandbox</h1> -->
 
 
 
+<div id="playground">
 
-<div id="passphrase">
-
-    <div id="generated" style="height: 3em; padding: .5em">
+    <div id="generated" style="min-height: 3em; padding: .5em">
+        
     </div>
-    <h3 style="text-align: left;">Passphrase <small>(generated at random)</small></h3>
+
+
 
 </div>
 
@@ -21,46 +23,62 @@ https://github.com/mervick/aes-everywhere/tree/master/javascript
 
 
 
-
 <style>
+    pre {
+        outline: 1px solid #ccc;
+        padding: 5px;
+        margin: 5px;
+    }
 
-pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
-.string { color: green; }
-.number { color: darkorange; }
-.boolean { color: blue; }
-.null { color: magenta; }
-.key { color: red; }
+    .string {
+        color: green;
+    }
 
+    .number {
+        color: darkorange;
+    }
+
+    .boolean {
+        color: blue;
+    }
+
+    .null {
+        color: magenta;
+    }
+
+    .key {
+        color: red;
+    }
 </style>
 
 
 <script>
 
-function output(inp) {
-    document.body.appendChild(document.createElement('pre')).innerHTML = inp;
-}
+    function output(inp) {
+        document.body.appendChild(document.createElement('pre')).innerHTML = inp;
+    }
 
-function syntaxHighlight(json) {
-    json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
-    return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
-        var cls = 'number';
-        if (/^"/.test(match)) {
-            if (/:$/.test(match)) {
-                cls = 'key';
-            } else {
-                cls = 'string';
+    function syntaxHighlight(json) {
+        json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+        return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
+            var cls = 'number';
+            if (/^"/.test(match)) {
+                if (/:$/.test(match)) {
+                    cls = 'key';
+                } else {
+                    cls = 'string';
+                }
+            } else if (/true|false/.test(match)) {
+                cls = 'boolean';
+            } else if (/null/.test(match)) {
+                cls = 'null';
             }
-        } else if (/true|false/.test(match)) {
-            cls = 'boolean';
-        } else if (/null/.test(match)) {
-            cls = 'null';
-        }
-        return '<span class="' + cls + '">' + match + '</span>';
-    });
-}
+            return '<span class="' + cls + '">' + match + '</span>';
+        });
+    }
 
-var obj = {a:1, 'b':'foo', c:[false,'false',null, 'null', {d:{e:1.3e5,f:'1.3e5'}}]};
-var str = JSON.stringify(obj, undefined, 4);
+    var obj = { a: 1, 'b': 'foo', c: [false, 'false', null, 'null', { d: { e: 1.3e5, f: '1.3e5' } }] };
+    var str = JSON.stringify(obj, undefined, 4);
 
 
 
@@ -71,43 +89,42 @@ var str = JSON.stringify(obj, undefined, 4);
         //console.log(err, result);
         //});
         console.log(JSON.parse(passed));
-        document.getElementById("passphrase").innerHTML = "<strong>Submitted!</strong><br /><pre>" + syntaxHighlight(passed) + "</pre>";
-        }
-        
+        document.getElementById("playground").innerHTML = "<h3>payload:</h3><pre>" + syntaxHighlight(passed) + "</pre><h3>decrypted message: </h3> Words, Pictures, things & such!<h2><a href='./'>return</a></h2>";
+    }
 
+    document.getElementById("playground").innerHTML += "Passphrase <small>(generated at random)</small><br />";
     let first, second, third, fourth, fifth, sixth, phrase = "";
 
-        for (let i = 0; i < 6; i++) {
-            first = Math.floor(Math.random() * 6 + 1);
-            second = Math.floor(Math.random() * 6 + 1);
-            third = Math.floor(Math.random() * 6 + 1);
-            fourth = Math.floor(Math.random() * 6 + 1);
-            fifth = Math.floor(Math.random() * 6 + 1);
-            dice = first + "" + second + "" + third + "" + fourth + "" + fifth;
-            phrase += WordList[dice];
-            document.getElementById("passphrase").innerHTML += "<span style='padding-left: 1em'>" + WordList[dice] + "</span>";
-        }
-        // encryption
-        var encrypted = AES256.encrypt('Words, Pictures, things & such!', phrase);
-        document.getElementById("passphrase").innerHTML += '<hr /><div>Phrase we are encrypting (payload): <br /> Words, Pictures, things & such!</div>';
-        document.getElementById("passphrase").innerHTML += "<br /><div>Encrypted <small>w/passphrase</small> (package):</div><div>" + encrypted + "</div>";
-        // decryption
-        document.getElementById("passphrase").innerHTML += "<div style='margin-top: 20px'>Decrypted <small>w/phrase</small> (Verify same as payload):</div>" + AES256.decrypt(encrypted, phrase);
-        let new_phrase = "passphrase: " + phrase;
-        let account = "empty.space"
-        let blokzchain_json = 
+    for (let i = 0; i < 6; i++) {
+        first = Math.floor(Math.random() * 6 + 1);
+        second = Math.floor(Math.random() * 6 + 1);
+        third = Math.floor(Math.random() * 6 + 1);
+        fourth = Math.floor(Math.random() * 6 + 1);
+        fifth = Math.floor(Math.random() * 6 + 1);
+        dice = first + "" + second + "" + third + "" + fourth + "" + fifth;
+        phrase += WordList[dice];
+        document.getElementById("playground").innerHTML += "<span style='padding-left: 1em'>" + WordList[dice] + "</span>";
+    }
+    // encryption
+    var encrypted = AES256.encrypt('Words, Pictures, things & such!', phrase);
+    document.getElementById("playground").innerHTML += '<br /><br /><div>text we are encrypting (message): <br /> Words, Pictures, things & such!</div>';
+    document.getElementById("playground").innerHTML += "<br /><div>encrypted <small>w/passphrase</small> (package):</div><div>" + encrypted + "</div>";
+    // decryption
+    document.getElementById("playground").innerHTML += "<div style='margin-top: 20px'>de-crypted <small>w/phrase</small> (verify same as message):</div>" + AES256.decrypt(encrypted, phrase);
+    let new_phrase = "passphrase: " + phrase;
+    let account = "empty.space"
+    let blokzchain_json =
+    {
+        "blokz box": [
+            'craft',
             {
-                "blokz box": [
-                    'craft',
-                    {
-                        "passphrase": phrase,
-                        "payload": "Words, Pictures, things & such!",
-                        "package": encrypted
-                    }
-                ]
+                "passphrase": phrase,
+                "package": encrypted
             }
+        ]
+    }
         ;
-        document.getElementById("generated").innerHTML += "<button onclick='generate(`" + JSON.stringify(blokzchain_json, undefined, 4) + "`)'>Submit Generated</button>";
+    document.getElementById("generated").innerHTML += "<h3>Review page then press <button onclick='generate(`" + JSON.stringify(blokzchain_json, undefined, 4) + "`)'>test</button></h3>";
 
 
 
