--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -19,33 +19,22 @@
 
     <p><a href="https://www.coinbase.com/join/forake_z">Join coinbase</a></p>
 
-    <p>Earn more with Coinbase, checkout the following links for access to learn and earn for free, the FREE here is in the
-    form of a short video (most 2-4 minutes) and answering a simple question which was based on the theme of the video,
-    super easy to answer if you legit watch then.</p>
 
     <p>No Bitcoin wallet? No way to get into crypto? No problem!!
     Cashapp has a referral program where we both get $5 when you sign-up and make your first $5/ transfer to someone,
     it's similar to venmo, but let's you buy stocks as well as has an integrated bitcoin wallet, check it out here:</p>
 
 
-    <p>CashApp: $blokzio<br /><a href="https://cash.app/app/XNLLMLS">Join cashapp</a></p>
+    <p><a href="https://cash.app/app/XNLLMLS">Join cashapp</a><br />CashApp: $blokzio</p>
 
 
     <p>Let's chat:</p>
 
-    <p><a href="https://discord.gg/CgE3Sgr">Discord</a></p>
+    <p><a href="https://discord.gg/CgE3Sgr">blokz Discord</a></p>
 
     <!-- 
     <span class="titleTip" title="eg: Mozilla, Camino, Netscape 6+">Gecko-based browsers</span>,
     select <em>Sinorca (alternative)</em> from the <em>View</em> &rsaquo; <em>Use Style</em>
     submenu.
   </span>  -->
-</div>
-
-<div>
-  <p class="sideBarTitle">Validation</p>
-  <span class="sideBarText">
-    Validate the <a href="http://validator.w3.org/check/referer">XHTML</a> and
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> of this page.
-  </span>
 </div>
