--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -6,35 +6,29 @@
 </div>
 
 <div class="lighterBackground">
-  <p class="sideBarTitle">Support Me!</p>
+  <p class="sideBarTitle">Supporting Me! <br /><small>and blokz by extension</small></p>
   <span class="sideBarText">
     Donations can be sent to the following addresses, or sign up with services using these referral links, where we both
     maybe get something cool.
   </span>
   <span class="sideBarText">
 
-    <p>If you don't currently use Coinbase, get $10/ free with your first $100/ transaction, the ref link says buy or sell,
-    so maybe use this as an opportunity to transfer our some hive with blocktrades or hive-engine with pegged coins that
-    are on Coinbase, I've settled on Litecoin with Coinbase Wallet, <!-- find out more here: --></p>
+    <p>If you don't currently use Coinbase, sign up and we'll both get $10/ free with your first $100/ transaction. <!-- find out more here: --></p>
 
     <p><a href="https://www.coinbase.com/join/forake_z">Join coinbase</a></p>
 
-
+    Coinbase makes it dead simple to get started with crypto. along with Cashapp...
     <p>No Bitcoin wallet? No way to get into crypto? No problem!!
-    Cashapp has a referral program where we both get $5 when you sign-up and make your first $5/ transfer to someone,
+    Cashapp has a referral program where we both get $15 when you sign-up and make your first $5/ transfer to someone,
     it's similar to venmo, but let's you buy stocks as well as has an integrated bitcoin wallet, check it out here:</p>
 
 
-    <p><a href="https://cash.app/app/XNLLMLS">Join cashapp</a><br />CashApp: $blokzio</p>
+    <p><a href="https://cash.app/app/JJWBBZT">Join cashapp</a><br />CashApp: $blokzio</p>
 
 
     <p>Let's chat:</p>
 
     <p><a href="https://discord.gg/CgE3Sgr">blokz Discord</a></p>
 
-    <!-- 
-    <span class="titleTip" title="eg: Mozilla, Camino, Netscape 6+">Gecko-based browsers</span>,
-    select <em>Sinorca (alternative)</em> from the <em>View</em> &rsaquo; <em>Use Style</em>
-    submenu.
-  </span>  -->
+   
 </div>
