--- a/src/pages/updates.ejs
+++ b/src/pages/updates.ejs
@@ -1,8 +1,9 @@
-<h1>$HIVE blog for @sn0n</h1>
+
 <script src="https://cdn.jsdelivr.net/npm/@hiveio/hive-js/dist/hive.min.js"></script>
 <script src="https://cdn.jsdelivr.net/remarkable/1.7.1/remarkable.min.js"></script>
 
 <script>
+    var div = document.getElementById('main-copy');
     const now = new Date().toISOString().split('.')[0];
     window.onload = function loading() {
 
@@ -10,7 +11,7 @@
 console.log(user + " is the default hive user");
 
 
-        hive.api.getDiscussionsByAuthorBeforeDate(user, null, now, 10, (err, result) => {
+        hive.api.getDiscussionsByAuthorBeforeDate(user, null, now, 20, (err, result) => {
 
             // testing for loop for posts. 
             // data for each post in a loop
@@ -30,52 +31,31 @@ console.log(user + " is the default hive user");
     xhtmlOut: true,
     linkify: true
 });
+    console.log("debugging crap : " + JSON.stringify(result));
 
-            // TODO: set loop for each & display inline popup
-            var recent1 = JSON.parse(JSON.stringify(result[0]));
+    result.forEach(element => {
+        console.log("texting + " + JSON.stringify(element))
+        var recent1 = JSON.parse(JSON.stringify(element));
             //console.log("recent1 from main: " + recent1.body);
             var recent1date = recent1.created.slice(0, 10);
+            post1 = md.render(recent1.body).replace("\n", "");
+            post1 = post1.replace(new RegExp("<img ", 'g'), "<img width='80%' ");
+            div.innerHTML += '<div id="post"><div id="posthead">' + recent1.title + "</div><small>" + recent1date + "</small><p>" + post1 + "</p></div><img src='../images/seperator.png' width='99%' />";
+    });
 
-            var div = document.getElementById('main-copy');
+
+            
 
        
             
 
             // TODO: set loop for each & display inline popup
-            var recent1 = JSON.parse(JSON.stringify(result[0]));
-            //console.log("recent1 from main: " + recent1.body);
-            var recent1date = recent1.created.slice(0, 10);
-            post1 = md.render(recent1.body).replace("\n", "");
-            post1 = post1.replace(new RegExp("<img ", 'g'), "<img width='80%' ");
-            div.innerHTML += '<div id="post"><h2>' + recent1.title + "</h2><small>" + recent1date + "</small><p>" + post1 + "</p></div><hr />";
 
            
             //document.getElementById("HivePost").innerHTML = marked(recent1.body);
             //console.log("TESTING RECENT POST: " + recent1.body);
 
 
-
-
-            var recent2 = JSON.parse(JSON.stringify(result[1]));
-            //console.log("recent 2")
-            //console.log(recent2);
-            var recent2date = recent2.created.slice(0, 10);
-            post2 = md.render(recent2.body).replace("\n", "");
-            post2 = post2.replace(new RegExp("<img ", 'g'), "<img width='80%' ");
-            div.innerHTML += '<div id="post"><h2>' + recent2.title + "</h2><small>" + recent2date + "</small><p>" + post2 + "</p></div><hr />";
-
-
-            //document.getElementById("HivePost").innerHTML = marked(recent1.body);
-            //console.log("TESTING RECENT POST: " + recent2.body);
-
-
-
-            var recent3 = JSON.parse(JSON.stringify(result[2]));
-            //console.log(recent3);
-            var recent3date = recent3.created.slice(0, 10);
-            post3 = md.render(recent3.body).replace("\n", "");
-            post3 = post3.replace(new RegExp("<img ", 'g'), "<img width='80%' ");
-            div.innerHTML += '<div id="post"><h2>' + recent3.title + "</h2><small>" + recent3date + "</small><p>" + post3 + "</p></div><hr />";
 
 
             //document.getElementById("HivePost").innerHTML = marked(recent1.body);
