--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -27,7 +27,7 @@
     <!--  class="highlight" for page links -->
     <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
-        <a href="../index.html">Home</a> |
+        <a href="../">Home</a> |
         <a href="../updates/">Updates</a> |
         <a href="../projects">Projects</a> |
         <a href="../contact">Contact</a> |
