--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -1,11 +1,8 @@
-<!---
-https://www.eff.org/dice
 
-https://github.com/mervick/aes-everywhere/tree/master/javascript
--->
 <!-- <h1>#DriveIdeas2Creation in a sandbox</h1> -->
 
-
+<script src="../js/aes256.min.js?ver=5.2"></script>
+<script src="../js/wordlist.js?ver=5.2"></script>
 
 <div id="playground">
 
