--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -6,20 +6,22 @@
 </div>
 
 <div class="lighterBackground">
-  <p class="sideBarTitle">Supporting Me! <br /><small>and blokz by extension</small></p>
+  <p class="sideBarTitle">Support Me! <br /><small>and blokz by extension</small></p>
   <span class="sideBarText">
-    Donations can be sent to the following addresses, or sign up with services using these referral links, where we both
-    maybe get something cool.
+    No Bitcoin wallet? No way to get into crypto? No problem!! sign up with services below using these referral links, where we both
+ get something cool.
   </span>
   <span class="sideBarText">
 
-    <p>If you don't currently use Coinbase, sign up and we'll both get $10/ free with your first $100/ transaction. <!-- find out more here: --></p>
+    <p><strong>Coinbase</strong> makes it dead simple to get started with crypto. If you don't currently use Coinbase, sign up and we'll both get $10/ free with your first $100/ transaction. 
+      They also have a crypto earn program, where you can earn about $45 for free by watching some short videos to learn more about various cryptocurrencies.<!-- find out more here: --></p>
 
     <p><a href="https://www.coinbase.com/join/forake_z">Join coinbase</a></p>
 
-    Coinbase makes it dead simple to get started with crypto. along with Cashapp...
-    <p>No Bitcoin wallet? No way to get into crypto? No problem!!
-    Cashapp has a referral program where we both get $15 when you sign-up and make your first $5/ transfer to someone,
+    
+     
+    <p>
+    <strong>Cashapp</strong> has a referral program where you get $5 when you sign-up and make your first $5/ transfer to someone (feel free to toss $blokzio $5 as a thank you!),
     it's similar to venmo, but let's you buy stocks as well as has an integrated bitcoin wallet, check it out here:</p>
 
 
