--- a/src/pages/blog.ejs
+++ b/src/pages/blog.ejs
@@ -30,7 +30,7 @@
                     div.innerHTML += '<div id="post"><div id="posthead">' + recent1.title + "</div><small>" + recent1date + "</small><p>" + post1 + "</p></div><img src='../images/seperator.png' width='99%' />";
                 });
                 // view more on peakd
-                div.innerHTML += "<br /><div style='display: block; padding: 1em; margin: 1em;  text-align: left'>View More on <a href='http://personal.community/?hive=" + user + "' target='_blank'>http://personal.community/?hive=" + user + "</a></div>";
+                div.innerHTML += "<br /><div style='display: block; padding: 1em; margin: 1em;  text-align: left'>View More on <a href='http://personal.community/@sn0n' target='_blank'>http://personal.community/@sn0n</a></div>";
 
             });
         }
